--- a/src/Mondo/SocialNetworkBundle/CSS/main.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/main.css
@@ -1,7 +1,94 @@
+body{
+	background: -webkit-linear-gradient(#5C5C3D, #1F5C1F);
+	background: -o-linear-gradient(#5C5C3D, #1F5C1F);
+	background: -moz-linear-gradient(#5C5C3D, #1F5C1F);
+	background: linear-gradient(#5C5C3D, #1F5C1F);
+}
+
+input{
+	color: #001400;
+	box-shadow: 5px 5px 250px #CCFFCC;
+	border: 2px solid #A3CCA3;
+	padding: 5px;
+	margin: 5px;
+	width: 300px;
+}
+
+::-webkit-input-placeholder {
+    color: #A3CCA3;
+    font-style: italic;
+}
+:-moz-placeholder {
+    color: #A3CCA3;
+    font-style: italic;
+}
+:-ms-input-placeholder {
+    color: #A3CCA3;
+    font-style: italic;
+}
+
+.btn-log {
+  background: -webkit-linear-gradient(#339933, #1F5C1F);
+  background: -o-linear-gradient(#339933, #1F5C1F);
+  background: -moz-linear-gradient(#339933, #1F5C1F);
+  background: linear-gradient(#339933, #1F5C1F);
+  float: right;
+  border-color: #ccc;
+  color: #EFFFDE;
+  font-weight: bold;
+  font-size: 80%;
+  width: 80px;
+}
+
+.checkB{
+	width: auto;
+}
+
+.sign{
+	font-size: 90%;
+}
+
+.go{
+	margin-left: auto;
+	margin-right: auto;
+	width: 300px;
+}
+
+.panel-login{
+	margin-top: 10%;
+	border: 1px solid;
+	border-color: #1F5C1F;
+	box-shadow: 5px 5px 55px #000000;
+	margin-left: auto;
+	margin-right: auto;
+	width: 500px;
+}
+.panel-login > .panel-heading {
+  color: #EFFFDE;
+  font-size:large;
+  font-weight: bold;
+  background: -webkit-linear-gradient(#339933, #1F5C1F);
+  background: -o-linear-gradient(#339933, #1F5C1F);
+  background: -moz-linear-gradient(#339933, #1F5C1F);
+  background: linear-gradient(#339933, #1F5C1F);
+  border-color: #d6e9c6;
+  }
+  
+  .panel-title {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: bold;
+  font-size: 24px;
+  }
+  
+  
+
 
 .frame {
-    border: 3px solid navy;
-    padding: 20px;
+    border: 1px solid green;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
 }
 .error {
     color: red;
