--- a/src/Mondo/SocialNetworkBundle/CSS/main2.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/main2.css
@@ -1,3 +1,48 @@
+.border{
+	border: 1px solid red;
+}
+
+.onlineUserInfo{
+	text-align: left;
+	padding-top: 10px;
+}
+
+.singleUser{
+	height: 60px;
+}
+
+.userAv{
+	text-align: center;
+	margin-top: 5px;
+	margin-left: 2px;
+}
+
+.users{
+	height: 355px;
+	overflow: auto;
+	overflow-x: hidden;
+}
+
+.userTable{
+	width: 250px;
+	border: 3px solid #D5E6C6;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	height: 400px;
+}
+
+.tableTitle{
+	text-align: center;
+	height: 40px;
+	padding-top: 10px;
+	background: #297A29;
+	color: white;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	box-shadow: 5px 5px 55px #F0FFF0;
+	
+}
+
 .imgCol{
 	margin-left: -15px;
 }
@@ -52,7 +97,7 @@
 }
 
 .chatHistory{
-	border: 3px solid #D5E6C6;
+		border: 3px solid #D5E6C6;
         overflow-y:scroll;
         width: 838px;
         height: 400px;
