--- a/src/Mondo/SocialNetworkBundle/CSS/main2.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/main2.css
@@ -23,6 +23,12 @@
 	overflow-x: hidden;
 }
 
+.user_key{
+    color: #52CC7A; 
+    font-size: 10px;
+    text-decoration: underline;
+}
+
 .userTable{
 	width: 250px;
 	border: 3px solid #D5E6C6;
