--- a/src/Mondo/SocialNetworkBundle/CSS/main2.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/main2.css
@@ -2,6 +2,21 @@
 	border: 1px solid red;
 }
 
+.chatTitle{
+	background: #197519;
+	width: 838px;
+	border-top: 3px solid #D5E6C6;
+	border-right: 3px solid #D5E6C6;
+	border-left: 3px solid #D5E6C6;
+	height: 40px;
+	color: white;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	padding-left: 20px;
+	padding-top: 10px;
+	font-style: italic;
+}
+
 .onlineUserInfo{
 	text-align: left;
 	padding-top: 10px;
@@ -34,7 +49,7 @@
 	border: 3px solid #D5E6C6;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
-	height: 400px;
+	height: 440px;
 }
 
 .tableTitle{
