--- a/src/Mondo/SocialNetworkBundle/CSS/chat.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/chat.css
@@ -1,3 +1,9 @@
+/****************************************
+ *
+ * Author: Paulina Ryfka
+ *
+ ****************************************/
+
 .border{
 	border: 1px solid red;
 }
