--- a/src/Mondo/SocialNetworkBundle/CSS/main.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/main.css
@@ -1,3 +1,9 @@
+/****************************************
+ *
+ * Author: Paulina Ryfka
+ *
+ ****************************************/
+
 body{
 	background: -webkit-linear-gradient(#5C5C3D, #1F5C1F);
 	background: -o-linear-gradient(#5C5C3D, #1F5C1F);
