--- a/src/Mondo/SocialNetworkBundle/CSS/pass-change.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/pass-change.css
@@ -1,3 +1,9 @@
+/****************************************
+ *
+ * Author: Paulina Ryfka
+ *
+ ****************************************/
+
 input{
 	width: 180px;
 	font-weight: normal;
