--- a/src/Mondo/SocialNetworkBundle/CSS/user_table.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/user_table.css
@@ -1,3 +1,9 @@
+/****************************************
+ *
+ * Author: Paulina Ryfka
+ *
+ ****************************************/
+
 .selected_user {
     background-color: #ff00ff;
 }
