--- a/src/Mondo/SocialNetworkBundle/CSS/home.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/home.css
@@ -1,3 +1,9 @@
+/****************************************
+ *
+ * Author: Paulina Ryfka
+ *
+ ****************************************/
+
 input{
 	width: 300px;
 }
