--- a/src/Mondo/SocialNetworkBundle/CSS/chat.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/chat.css
@@ -38,7 +38,19 @@
 .onlineUserInfo{
 	text-align: left;
 	padding-top: 10px;
+        width: 50%;
 }
+
+.unreadAmount{
+       float: left;
+       text-align: center;
+       padding-top: 10px;
+       vertical-align: middle;
+       height: 100%;
+       color: red;
+       font-weight: bold;
+       font-size: 24px;
+} 
 
 .singleUser{
 	height: 60px;
