--- a/src/Mondo/SocialNetworkBundle/CSS/main.css
+++ b/src/Mondo/SocialNetworkBundle/CSS/main.css
@@ -62,11 +62,15 @@ textarea{
   border-color: #d6e9c6;
   }
   
-  .panel-title {
+.panel-title {
   margin-top: 0;
   margin-bottom: 0;
   font-weight: bold;
   font-size: 24px;
   text-align: left;
-  }
- 
+}
+  
+.error {
+    color: red;
+    font-size: 70%;
+}
